--- a/css/opportunity-space-style.css
+++ b/css/opportunity-space-style.css
@@ -335,6 +335,209 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+/*
+ * jQuery FlexSlider v2.0
+ * http://www.woothemes.com/flexslider/
+ *
+ * Copyright 2012 WooThemes
+ * Free to use under the GPLv2 license.
+ * http://www.gnu.org/licenses/gpl-2.0.html
+ *
+ * Contributing author: Tyler Smith (@mbmufffin)
+ */
+/* Browser Resets */
+.flex-container a:active,
+.flexslider a:active,
+.flex-container a:focus,
+.flexslider a:focus {
+  outline: none; }
+
+.slides,
+.flex-control-nav,
+.flex-direction-nav {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+/* FlexSlider Necessary Styles
+*********************************/
+.flexslider {
+  margin: 0;
+  padding: 0; }
+
+.flexslider .slides > li {
+  display: none;
+  -webkit-backface-visibility: hidden; }
+
+/* Hide the slides before the JS is loaded. Avoids image jumping */
+.flexslider .slides img {
+  width: 100%;
+  display: block; }
+
+.flex-pauseplay span {
+  text-transform: capitalize; }
+
+/* Clearfix for the .slides element */
+.slides:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0; }
+
+html[xmlns] .slides {
+  display: block; }
+
+* html .slides {
+  height: 1%; }
+
+/* No JavaScript Fallback */
+/* If you are not using another script, such as Modernizr, make sure you
+ * include js that eliminates this class on page load */
+.no-js .slides > li:first-child {
+  display: block; }
+
+/* FlexSlider Default Theme
+*********************************/
+.flexslider {
+  margin: 0 0 60px;
+  background: #fff;
+  border: 4px solid #fff;
+  position: relative;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  zoom: 1; }
+
+.flex-viewport {
+  max-height: 2000px;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  transition: all 1s ease; }
+
+.loading .flex-viewport {
+  max-height: 300px; }
+
+.flexslider .slides {
+  zoom: 1; }
+
+.carousel li {
+  margin-right: 5px; }
+
+/* Direction Nav */
+.flex-direction-nav {
+  *height: 0; }
+
+.flex-direction-nav a {
+  width: 30px;
+  height: 30px;
+  margin: -20px 0 0;
+  display: block;
+  background: url(/wp-content/themes/opportunity-space-theme/img/bg_direction_nav.png) no-repeat 0 0;
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+  cursor: pointer;
+  text-indent: -9999px;
+  opacity: 0;
+  -webkit-transition: all .3s ease; }
+
+.flex-direction-nav .flex-next {
+  background-position: 100% 0;
+  right: -36px; }
+
+.flex-direction-nav .flex-prev {
+  left: -36px; }
+
+.flexslider:hover .flex-next {
+  opacity: 0.8;
+  right: 5px; }
+
+.flexslider:hover .flex-prev {
+  opacity: 0.8;
+  left: 5px; }
+
+.flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover {
+  opacity: 1; }
+
+.flex-direction-nav .flex-disabled {
+  opacity: 0;
+  /*filter:alpha(opacity=30)*/
+  cursor: default; }
+
+/* Control Nav */
+.flex-control-nav {
+  width: 100%;
+  position: absolute;
+  bottom: -40px;
+  text-align: center; }
+
+.flex-control-nav li {
+  margin: 0 6px;
+  display: inline-block;
+  zoom: 1;
+  *display: inline; }
+
+.flex-control-paging li a {
+  width: 11px;
+  height: 11px;
+  display: block;
+  background: #666;
+  background: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  text-indent: -9999px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -o-border-radius: 20px;
+  border-radius: 20px;
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3); }
+
+.flex-control-paging li a:hover {
+  background: #333;
+  background: rgba(0, 0, 0, 0.7); }
+
+.flex-control-paging li a.flex-active {
+  background: #000;
+  background: rgba(0, 0, 0, 0.9);
+  cursor: default; }
+
+.flex-control-thumbs {
+  margin: 5px 0 0;
+  position: static;
+  overflow: hidden; }
+
+.flex-control-thumbs li {
+  width: 25%;
+  float: left;
+  margin: 0; }
+
+.flex-control-thumbs img {
+  width: 100%;
+  display: block;
+  opacity: .7;
+  cursor: pointer; }
+
+.flex-control-thumbs img:hover {
+  opacity: 1; }
+
+.flex-control-thumbs .flex-active {
+  opacity: 1;
+  cursor: default; }
+
+@media screen and (max-width: 860px) {
+  .flex-direction-nav .flex-prev {
+    opacity: 1;
+    left: 0; }
+
+  .flex-direction-nav .flex-next {
+    opacity: 1;
+    right: 0; } }
 /* Colors! */
 /* ==========================================================================
    Top Level Elements
@@ -364,7 +567,8 @@ hr {
   *zoom: 1;
   max-width: 68em;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  padding: 0 1.875em; }
   .wrap:before, .wrap:after {
     content: " ";
     display: table; }
@@ -378,6 +582,14 @@ hr {
   width: 48.82117%; }
   #header .widget-area:last-child {
     margin-right: 0; }
+  @media screen and (max-width: 940px) {
+    #header .widget-area {
+      display: block;
+      float: left;
+      margin-right: 2.35765%;
+      width: 100%; }
+      #header .widget-area:last-child {
+        margin-right: 0; } }
 
 #title-area {
   display: block;
@@ -386,6 +598,15 @@ hr {
   width: 48.82117%; }
   #title-area:last-child {
     margin-right: 0; }
+  @media screen and (max-width: 940px) {
+    #title-area {
+      display: block;
+      float: left;
+      margin-right: 2.35765%;
+      width: 100%;
+      text-align: center; }
+      #title-area:last-child {
+        margin-right: 0; } }
 
 .content-area {
   position: relative;
@@ -459,32 +680,72 @@ hr {
     display: table; }
   #menu-primary-nav:after {
     clear: both; }
+  @media screen and (max-width: 940px) {
+    #menu-primary-nav {
+      display: block;
+      float: left;
+      margin-right: 2.35765%;
+      width: 100%;
+      *zoom: 1;
+      display: table; }
+      #menu-primary-nav:last-child {
+        margin-right: 0; }
+      #menu-primary-nav:before, #menu-primary-nav:after {
+        content: " ";
+        display: table; }
+      #menu-primary-nav:after {
+        clear: both; } }
+  @media screen and (max-width: 750px) {
+    #menu-primary-nav {
+      display: block; } }
   #menu-primary-nav > li {
     display: inline-block;
     vertical-align: baseline;
     zoom: 1;
     *display: inline;
     *vertical-align: auto; }
+    @media screen and (max-width: 940px) {
+      #menu-primary-nav > li {
+        display: table-cell;
+        padding-right: 2.35765%;
+        width: 25.58941%;
+        padding: 0; }
+        #menu-primary-nav > li:last-child {
+          padding-right: 0; } }
+    @media screen and (max-width: 750px) {
+      #menu-primary-nav > li {
+        display: block;
+        float: left;
+        margin-right: 2.35765%;
+        width: 100%; }
+        #menu-primary-nav > li:last-child {
+          margin-right: 0; } }
+    @media screen and (max-width: 500px) {
+      #menu-primary-nav > li {
+        float: none;
+        display: block;
+        width: 100%; } }
     #menu-primary-nav > li > a {
       display: inline-block;
       vertical-align: baseline;
       zoom: 1;
       *display: inline;
       *vertical-align: auto;
-      padding: 40px 20px;
+      padding: 2.5em 0.9375em;
       width: 100%;
       color: #666;
-      text-decoration: none; }
+      text-decoration: none;
+      white-space: nowrap;
+      background-color: rgba(0, 0, 0, 0.05); }
+      @media screen and (max-width: 940px) {
+        #menu-primary-nav > li > a {
+          padding: 0.625em 0; } }
       #menu-primary-nav > li > a:hover {
         background-color: white; }
-    #menu-primary-nav > li.current_page_item {
-      text-shadow: 0 1px 1px #86612d; }
-      #menu-primary-nav > li.current_page_item > a {
-        color: #fff;
-        font-weight: bold;
-        background-color: #e0a24b; }
-      #menu-primary-nav > li.current_page_item span {
-        color: #fff; }
+    #menu-primary-nav > li.current_page_item > a {
+      color: #222;
+      font-weight: bold;
+      background-color: rgba(0, 0, 0, 0.1); }
     #menu-primary-nav > li:last-child span {
       padding: 3px 6px;
       border-radius: 2px; }
@@ -557,6 +818,17 @@ body, section.hero h1 {
   letter-spacing: -1px;
   line-height: 1;
   text-transform: uppercase; }
+  @media screen and (max-width: 940px) {
+    #title {
+      top: 0;
+      padding: 10px 0;
+      font-size: 2.4em; } }
+  @media screen and (max-width: 440px) {
+    #title {
+      font-size: 2em; } }
+  @media screen and (max-width: 360px) {
+    #title {
+      font-size: 1.6em; } }
   #title > a {
     text-decoration: none; }
     #title > a:hover {
@@ -564,19 +836,11 @@ body, section.hero h1 {
 
 section.hero {
   *zoom: 1;
-  max-width: 68em;
-  margin-left: auto;
-  margin-right: auto;
-  *zoom: 1;
   display: table;
   color: #fff;
   border-top: 3px solid #e0a24b;
-  background-color: #222; }
-  section.hero:before, section.hero:after {
-    content: " ";
-    display: table; }
-  section.hero:after {
-    clear: both; }
+  background-color: #222;
+  box-shadow: 0 5px 5px 1px rgba(0, 0, 0, 0.4); }
   section.hero:before, section.hero:after {
     content: " ";
     display: table; }
@@ -595,7 +859,7 @@ section.hero {
     float: left;
     margin-right: 2.35765%;
     width: 48.82117%;
-    padding: 0 0 0 30px; }
+    padding: 0 0 0 1.875em; }
     section.hero .description:last-child {
       margin-right: 0; }
   section.hero img {
@@ -604,7 +868,31 @@ section.hero {
     border-bottom-color: #222; }
   section.hero h1 {
     margin: 24px 0 0;
+    font-size: 1.8em;
     line-height: 1; }
+    @media screen and (min-width: 660px) {
+      section.hero h1 {
+        white-space: nowrap; } }
+  @media screen and (max-width: 1100px) {
+    section.hero {
+      font-size: 90%; } }
+  @media screen and (max-width: 940px) {
+    section.hero {
+      font-size: 85%; } }
+  @media screen and (max-width: 940px) {
+    section.hero {
+      font-size: 100%; }
+      section.hero .textwidget,
+      section.hero .description {
+        display: block;
+        float: left;
+        margin-right: 2.35765%;
+        width: 100%; }
+        section.hero .textwidget:last-child,
+        section.hero .description:last-child {
+          margin-right: 0; }
+      section.hero .description {
+        padding: 0 1.875em 1.875em; } }
 
 section.features .entry {
   *zoom: 1;
@@ -639,3 +927,26 @@ section.features img.alignright {
     width: 26.14671%; }
     .social-media > li:last-child {
       margin-right: 0; }
+
+.flexslider {
+  margin-bottom: 30px; }
+  .flexslider img {
+    padding: 0;
+    border: none; }
+
+.flex-viewport {
+  overflow: hidden;
+  position: relative; }
+
+.slides {
+  width: 2400%;
+  -webkit-transition: 0s;
+  -webkit-transform: translate3d(0px, 0, 0); }
+
+#slider .slides > li {
+  float: left;
+  width: 210px; }
+
+#carousel .slides > li {
+  float: left;
+  width: 1000px; }
